# cgal

.github/workflows/: gh-pages.yml
DDT/demo/DDT_demo/: CMakeLists.txt  DDT_demo.h  ddt.qgz  ddt_mpi_2.cpp  ddt_mt_2.cpp  ddt_mt_3.cpp  ddt_mt_d.cpp  ddt_mt_d2.cpp  ddt_mt_d3.cpp  ddt_mt_d4.cpp  ddt_seq_2.cpp  ddt_seq_3.cpp  ddt_seq_d.cpp  ddt_seq_d2.cpp  ddt_seq_d3.cpp  ddt_seq_d4.cpp  ddt_std_par_2.cpp  ddt_std_seq_2.cpp  ddt_tbb_2.cpp  ddt_tbb_3.cpp  ddt_tbb_d.cpp  ddt_tbb_d2.cpp  ddt_tbb_d3.cpp  ddt_tbb_d4.cpp  logging.h
DDT/demo/DDT_demo/include/CGAL/DDT/scheduler/: Multithread_scheduler.h  STD_scheduler.h
DDT/demo/DDT_demo/include/CGAL/DDT/scheduler/multithread_scheduler/: thread_pool.h
DDT/demo/DDT_python/: CMakeLists.txt  ddt.py  ddt_qgs.py  pyddt.cpp
DDT/demo/DDT_qgis/: CMakeLists.txt
DDT/doc/CGAL/: distributed_Delaunay_triangulation.h
DDT/doc/Concepts/: Partitioner.h  TileContainer.h
DDT/doc/DDT/: DDT.txt  Doxyfile.in  PackageDescription.txt  examples.txt
DDT/doc/DDT/CGAL/: distributed_Delaunay_triangulation.h
DDT/doc/DDT/Concepts/: Bbox.h  CellIterator.h  DelaunayTriangulation.h  FacetIterator.h  Id.h  Partitioner.h  Point.h  PointIdRange.h  PointSet.h  RandomPointsInBall.h  RandomPointsInBox.h  Scheduler.h  Selector.h  Serializer.h  SimplexIndex.h  TileContainer.h  TileIndex.h  Triangulation.h  TriangulationTraits.h  VertexIterator.h  VertexPropertyMap.h
DDT/doc/DDT/fig/: facet_cell.ipe  mirror_facet.ipe
DDT/examples/DDT/: CMakeLists.txt  ddt_3d_from_las.cpp  ddt_from_las_3.cpp  ddt_mt_2.cpp  ddt_out_of_core_2.cpp  ddt_tbb_2.cpp
DDT/include/CGAL/: DDT.h  Distributed_Delaunay_triangulation.h  Distributed_point_set.h  Distributed_triangulation.h  make_distributed_point_set.h
DDT/include/CGAL/DDT/: Bbox.h  DDT.hpp  Data.h  Delaunay_triangulation.h  Delaunay_triangulation_2.h  Delaunay_triangulation_3.h  Messaging.h  Messaging_container.h  Point_set.h  Point_set_container.h  Scheduler.h  Tile.h  Tile_container.h  Tile_loader.h  Tile_point_set.h  Tile_points.h  Tile_triangulation.h  bbox.h  bbox.hpp  data.h  data.hpp  distributed_Delaunay_triangulation.h  insert.h  main.cpp  scheduler.h  tile.h  tile.hpp  tile_container.h
DDT/include/CGAL/DDT/IO/: logging.h  read.h  read.hpp  read_cgal.h  read_cgal.hpp  read_las.h  trace_logger.h  write.h  write_cgal.h  write_cgal.hpp  write_dot.h  write_geojson.h  write_ply.h  write_pvtu.h  write_tri.h  write_tri.hpp  write_vrt.h  write_vrt.hpp
DDT/include/CGAL/DDT/algo/: algo_ddt.h  algo_ddt.hpp
DDT/include/CGAL/DDT/conf/: conf.hpp.in
DDT/include/CGAL/DDT/io/: logging.cpp  logging.hpp  read.hpp  write.hpp  write_dot.hpp  write_geojson.hpp  write_ply.cpp  write_ply.hpp  write_vrt.cpp  write_vrt.hpp
DDT/include/CGAL/DDT/iterator/: Cell_const_iterator.h  Cell_iterator.h  Facet_const_iterator.h  Facet_const_iterator_2.h  Facet_const_iterator_2.hpp  Facet_const_iterator_3.h  Facet_const_iterator_d.h  Facet_const_iterator_d.hpp  Facet_iterator.h  Tile_iterator.h  Vertex_const_iterator.h  Vertex_const_iterator.hpp  Vertex_iterator.h
DDT/include/CGAL/DDT/kernel/: Bbox.h  Kernel_traits.h  Kernel_traits_2.h  Kernel_traits_3.h  Kernel_traits_d.h  Uniform_point_in_bbox_generator.h
DDT/include/CGAL/DDT/partitioner/: Const_partitioner.h  Grid_partitioner.h  Random_partitioner.h  const_partitioner.h  count_random_points_in_tiles.h  grid_partitioner.h  grid_partitioner.hpp  random_partitioner.h
DDT/include/CGAL/DDT/point_set/: Container_point_set.h  LAS_point_set.h  Pair_container_point_set.h  Point_set_traits.h  Random_point_set.h  Random_points_in_bbox.h  count_random_points_in_tiles.h  mpl.h
DDT/include/CGAL/DDT/property_map/: All_local_property_map.h  Constant_property_map.h  Default_tile_index_map.h  First_property_map.h  Internal_property_map.h  Pair_container_property_map.h  Partitioner_property_map.h  Vertex_data_property_map.h  Vertex_info_property_map.h
DDT/include/CGAL/DDT/python/: ddt.py  pyddt.cpp
DDT/include/CGAL/DDT/scheduler/: MPI_scheduler.h  Multithread_scheduler.h  STD_scheduler.h  Sequential_scheduler.h  TBB_scheduler.h  mpi_scheduler.h  multithread_scheduler.h  multithread_scheduler.hpp  safe.h  safe.hpp  scheduler.h  scheduler.hpp  sequential_scheduler.h  tbb_scheduler.h  thread_pool.h  thread_pool.hpp
DDT/include/CGAL/DDT/selector/: Maximum_selector.h  Median_selector.h  Minimum_selector.h
DDT/include/CGAL/DDT/serializer/: File_points_serializer.h  File_serializer.h  No_serialization.h  No_serializer.h  PVTU_file_serializer.h  VRT_file_serializer.h  file_serializer.h
DDT/include/CGAL/DDT/tile_points/: LAS_tile_points.h  No_tile_points.h
DDT/include/CGAL/DDT/traits/: Bbox.h  Data.h  Facet_const_iterator_2.h  Facet_const_iterator_3.h  Facet_const_iterator_d.h  Facet_index.h  Partitioner_property_map.h  Triangulation_traits.h  Triangulation_traits_2.h  Triangulation_traits_3.h  Triangulation_traits_d.h  Vertex_data_property_map.h  Vertex_info_property_map.h  cgal_traits_2.h  cgal_traits_2.hpp  cgal_traits_3.h  cgal_traits_3.hpp  cgal_traits_d.h  cgal_traits_d.hpp  ddt_vertex_base_with_info_2.h  ddt_vertex_base_with_info_3.h
DDT/package_info/DDT/: copyright  dependencies  description.txt  maintainer
DDT/test/DDT/: CMakeLists.txt  test_DDT.cpp  test_DDT_traits_2.cpp  test_DDT_traits_3.cpp  test_DDT_traits_concept.cpp  test_DDT_traits_d.cpp  test_DDT_traits_d2.cpp  test_DDT_traits_d3.cpp  test_DDT_traits_d4.cpp  test_cgal_traits_2.cpp  test_cgal_traits_3.cpp  test_cgal_traits_d2.cpp  test_cgal_traits_d3.cpp  test_cgal_traits_d4.cpp  test_selector.cpp  test_traits.h  test_traits.hpp
DDT/test/DDT/include/Concepts/: Bbox.h  KernelTraits.h  Point.h  PointSetTraits.h  RandomPointsInBall.h  RandomPointsInBox.h  Selector.h  TriangulationTraits.h
Documentation/doc/Documentation/: packages.txt
Triangulation/include/CGAL/: Triangulation.h  Triangulation_data_structure.h  Triangulation_vertex.h
Triangulation_2/include/CGAL/: Triangulation_vertex_base_with_info_2.h
Triangulation_3/include/CGAL/: Triangulation_vertex_base_with_info_3.h
(+8 files in other folders)
