# Created by the script cgal_create_cmake_script
# This is the CMake script for compiling a CGAL application.

cmake_minimum_required(VERSION 3.1...3.14)
project( DDT_Demos )

include_directories("include")

find_package(CGAL REQUIRED)
find_package(Boost QUIET COMPONENTS filesystem program_options)
if(NOT TARGET Boost::filesystem OR NOT TARGET Boost::program_options)
  message(STATUS  "NOTICE: Demos require boost filesystem and program options, and will not be compiled.")
  return()
endif()
set(DDT_LIBRARIES PRIVATE Boost::filesystem Boost::program_options)

option (USE_TBB "Use TBB " ON)
if (USE_TBB)
  find_package(TBB QUIET)
  include(CGAL_TBB_support)
endif()

option (USE_MPI "Use MPI " OFF)
if (USE_MPI)
  find_package(MPI)
  if ( MPI_FOUND )
    include_directories(SYSTEM ${MPI_INCLUDE_PATH})
    add_definitions("-DCGAL_LINKED_WITH_MPI=1")
  else()
    message(STATUS "NOTICE: MPI library not found, MPI support is thus disabled.")
  endif()
endif()

find_package(Eigen3)
include(CGAL_Eigen3_support)
if(NOT TARGET CGAL::Eigen3_support)
  message(STATUS  "NOTICE: Some tests requires Eigen3 and will not be compiled.")
endif()


create_single_source_cgal_program( "ddt_seq_2.cpp" )
create_single_source_cgal_program( "ddt_seq_3.cpp" )
create_single_source_cgal_program( "ddt_mt_2.cpp" )
create_single_source_cgal_program( "ddt_mt_3.cpp" )
target_link_libraries(ddt_mt_2 ${DDT_LIBRARIES})
target_link_libraries(ddt_mt_3 ${DDT_LIBRARIES})
target_link_libraries(ddt_seq_2 ${DDT_LIBRARIES})
target_link_libraries(ddt_seq_3 ${DDT_LIBRARIES})

if(TARGET CGAL::Eigen3_support)
  create_single_source_cgal_program( "ddt_seq_d.cpp" )
  create_single_source_cgal_program( "ddt_seq_d2.cpp" )
  create_single_source_cgal_program( "ddt_seq_d3.cpp" )
  create_single_source_cgal_program( "ddt_seq_d4.cpp" )
  create_single_source_cgal_program( "ddt_mt_d.cpp" )
  create_single_source_cgal_program( "ddt_mt_d2.cpp" )
  create_single_source_cgal_program( "ddt_mt_d3.cpp" )
  create_single_source_cgal_program( "ddt_mt_d4.cpp" )
  target_link_libraries(ddt_seq_d  PUBLIC CGAL::Eigen3_support ${DDT_LIBRARIES})
  target_link_libraries(ddt_seq_d2 PUBLIC CGAL::Eigen3_support ${DDT_LIBRARIES})
  target_link_libraries(ddt_seq_d3 PUBLIC CGAL::Eigen3_support ${DDT_LIBRARIES})
  target_link_libraries(ddt_seq_d4 PUBLIC CGAL::Eigen3_support ${DDT_LIBRARIES})
  target_link_libraries(ddt_mt_d  PUBLIC CGAL::Eigen3_support ${DDT_LIBRARIES})
  target_link_libraries(ddt_mt_d2 PUBLIC CGAL::Eigen3_support ${DDT_LIBRARIES})
  target_link_libraries(ddt_mt_d3 PUBLIC CGAL::Eigen3_support ${DDT_LIBRARIES})
  target_link_libraries(ddt_mt_d4 PUBLIC CGAL::Eigen3_support ${DDT_LIBRARIES})
endif()

if ( TARGET CGAL::TBB_support )
    create_single_source_cgal_program( "ddt_std_seq_2.cpp" )
    create_single_source_cgal_program( "ddt_std_par_2.cpp" )
    create_single_source_cgal_program( "ddt_tbb_2.cpp" )
    create_single_source_cgal_program( "ddt_tbb_3.cpp" )
    target_link_libraries(ddt_std_seq_2 PUBLIC CGAL::TBB_support ${DDT_LIBRARIES})
    target_link_libraries(ddt_std_par_2 PUBLIC CGAL::TBB_support ${DDT_LIBRARIES})
    target_link_libraries(ddt_tbb_2 PUBLIC CGAL::TBB_support ${DDT_LIBRARIES})
    target_link_libraries(ddt_tbb_2 PUBLIC CGAL::TBB_support ${DDT_LIBRARIES})
    target_link_libraries(ddt_tbb_3 PUBLIC CGAL::TBB_support ${DDT_LIBRARIES})
    if(TARGET CGAL::Eigen3_support)
        create_single_source_cgal_program( "ddt_tbb_d.cpp" )
        create_single_source_cgal_program( "ddt_tbb_d2.cpp" )
        create_single_source_cgal_program( "ddt_tbb_d3.cpp" )
        create_single_source_cgal_program( "ddt_tbb_d4.cpp" )
        target_link_libraries(ddt_tbb_d  PUBLIC CGAL::TBB_support CGAL::Eigen3_support ${DDT_LIBRARIES})
        target_link_libraries(ddt_tbb_d2 PUBLIC CGAL::TBB_support CGAL::Eigen3_support ${DDT_LIBRARIES})
        target_link_libraries(ddt_tbb_d3 PUBLIC CGAL::TBB_support CGAL::Eigen3_support ${DDT_LIBRARIES})
        target_link_libraries(ddt_tbb_d4 PUBLIC CGAL::TBB_support CGAL::Eigen3_support ${DDT_LIBRARIES})
    endif()
endif()

if ( MPI_FOUND )

	create_single_source_cgal_program( "ddt_mpi_2.cpp" )
	#create_single_source_cgal_program( "ddt_mpi_3.cpp" )
	target_link_libraries(ddt_mpi_2 PUBLIC ${MPI_CXX_LIBRARIES} ${DDT_LIBRARIES})
	#target_link_libraries(ddt_mpi_3 PUBLIC ${MPI_CXX_LIBRARIES} ${DDT_LIBRARIES})
	if(TARGET CGAL::Eigen3_support)
		#create_single_source_cgal_program( "ddt_mpi_d.cpp" )
		#create_single_source_cgal_program( "ddt_mpi_d2.cpp" )
		#create_single_source_cgal_program( "ddt_mpi_d3.cpp" )
		#create_single_source_cgal_program( "ddt_mpi_d4.cpp" )
		#target_link_libraries(ddt_tbb_d  PUBLIC ${MPI_CXX_LIBRARIES} CGAL::Eigen3_support ${DDT_LIBRARIES})
		#target_link_libraries(ddt_tbb_d2 PUBLIC ${MPI_CXX_LIBRARIES} CGAL::Eigen3_support ${DDT_LIBRARIES})
		#target_link_libraries(ddt_tbb_d3 PUBLIC ${MPI_CXX_LIBRARIES} CGAL::Eigen3_support ${DDT_LIBRARIES})
		#target_link_libraries(ddt_tbb_d4 PUBLIC ${MPI_CXX_LIBRARIES} CGAL::Eigen3_support ${DDT_LIBRARIES})
	endif()
endif()
